# bluelotus-engine

./: .env.template  .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
archive/: __init__.py  agent_report_archive.py  disagreement_archive.py  learning_loop_archive.py  strategist_archive.py
bluelotus_engine/: __init__.py  cli.py  timeutil.py
chief_strategist/: __init__.py  deterministic_clerk_digest.py
cio_context_capsule/: __init__.py  builder.py  master_prompt.py  partial_artifact.py  renderers.py  validator.py
config/: agent_context_map.yaml  agent_registry.yaml  bluelotus3.yaml  dashboard_widgets.yaml  execution_queue.yaml  llm_safety_policy.yaml  memory_retrieval_policy.yaml  model_registry.yaml  operator_registry.yaml  pl_data_sources.yaml  pl_nash_tables.yaml  pl_player_catalog.yaml  pl_signal_lexicon.yaml  prediction_layers.yaml  prompt_registry.yaml  safety_policy.yaml  thesis_registry.yaml  v3_database.yaml  v3_doctrine_seed.json  v3_pipeline.yaml  v3_pipeline_research.yaml
geo_game_theory/: __init__.py  ce_envelope.py  geo_lr_bridge.py  global_games.py  qre_solver.py
governance/: IMPLEMENTATION_NOTE.txt  __init__.py  breaking_catalyst_rules.json  contract_validation.py  contradiction_governance.py  execution_doctrine.py  governance_config.json  governance_gate.py  pipeline_run_ledger.py  portfolio_integrity.py  regression_tests.py  report_contract.json  run_contract_validation.py  scenario_overlay_engine.py
learning/: __init__.py  claim_registrars.py  claim_store.py  constants.py  cycle_report.py  memory_graph.py  outcome_engine.py  outcome_tagger.py  paths.py  promotion_ledger.py  promotion_proposal.py  retention.py
llm_clients/: __init__.py  config_loader.py  create_ollama_alias.py  (+6 more)
(+67 files in other folders)
