[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluelotus-engine"
version = "3.0.0"
description = "Deterministic BlueLotus V3 research engine — governance, clerk, NITE-PEI, SLICDO (no publish, no telegram)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "BlueLotus Project Contributors" }]
keywords = ["finance", "research", "governance", "bayesian", "family-office"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "PyYAML>=6.0",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bluelotus = "bluelotus_engine.cli:main"

[project.urls]
Homepage = "https://github.com/sohweekian/bluelotus-engine"
Documentation = "https://github.com/sohweekian/bluelotus-engine-docs"
Source = "https://github.com/sohweekian/bluelotus-engine"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "bluelotus_engine*",
  "governance*",
  "learning*",
  "nite_pei*",
  "replay*",
  "archive*",
  "llm_clients*",
  "orchestration*",
  "chief_strategist*",
  "research*",
  "scripts*",
  "cio_context_capsule*",
]
exclude = ["tests*", "tools*"]

[tool.setuptools.package-data]
governance = ["*.json"]
schemas = ["*.json"]
"*" = ["config/*.yaml", "config/*.json", ".env.template", "data/samples/*"]
